--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -77,7 +77,7 @@
         <br>
         <br>
         <br>
-        <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=70&t=n&d=KOa6y07IIX6k-Ps4GzrjeE93-oH9mX6hn_6vDZ_2ZQc"></script>
+        <!-- <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=70&t=n&d=KOa6y07IIX6k-Ps4GzrjeE93-oH9mX6hn_6vDZ_2ZQc"></script> -->
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
