--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -58,21 +58,22 @@
       <footer>
         <div class="social-icons">
 
-          {% if site.linkedin %}
-          <a href="{{ site.linkedin }}" target="_blank">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
-          {% endif %}
-          {% if site.google_scholar %}
-          <a href="{{ site.google_scholar}}" target="_blank">
-            <i class="ai ai-google-scholar" style="font-size:1.6rem"></i>
-          </a>
-          {% endif %}
           {% if site.github_link %}            
           <a href="{{ site.github_link }}" target="_blank">
             <i class="fab fa-github"></i>
           </a>
           {% endif %}
+          {% if site.youtube %}
+          <a href="{{ site.youtube }}" target="_blank">
+            <i class="fab fa-youtube"></i>
+          </a>
+          {% endif %}
+          {% if site.instagram %}
+          <a href="{{ site.instagram }}" target="_blank">
+            <i class="fab fa-instagram"></i>
+          </a>
+          {% endif %}
+          
         </div>
         <br>
         <br>
