--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -68,6 +68,11 @@
             <i class="fab fa-youtube"></i>
           </a>
           {% endif %}
+          {% if site.youtube1 %}
+          <a href="{{ site.youtube1 }}" target="_blank">
+            <i class="fab fa-youtube"></i>
+          </a>
+          {% endif %}
           {% if site.instagram %}
           <a href="{{ site.instagram }}" target="_blank">
             <i class="fab fa-instagram"></i>
