--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -63,6 +63,11 @@
             <i class="fab fa-github"></i>
           </a>
           {% endif %}
+          {% if site.google_scholar %}
+          <a href="{{ site.google_scholar}}" target="_blank">
+            <i class="ai ai-google-scholar" style="font-size:1.6rem"></i>
+          </a>
+          {% endif %}
           {% if site.youtube %}
           <a href="{{ site.youtube }}" target="_blank">
             <i class="fab fa-youtube"></i>
