--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -87,8 +87,7 @@
         </div>
         <br>
         <br>
-        <br>
-        <!-- <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=70&t=n&d=KOa6y07IIX6k-Ps4GzrjeE93-oH9mX6hn_6vDZ_2ZQc"></script> -->
+        <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=bxlSLhlNupkcon_whTxxMxQ8q53OgvnqdNK_qWLkeEM&cl=ffffff&w=a"></script> 
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
