--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -87,7 +87,7 @@
         </div>
         <br>
         <br>
-        <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=bxlSLhlNupkcon_whTxxMxQ8q53OgvnqdNK_qWLkeEM&cl=ffffff&w=a"></script> 
+        <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=0e1633&w=100&t=n&d=bxlSLhlNupkcon_whTxxMxQ8q53OgvnqdNK_qWLkeEM&co=0b4975&cmo=3acc3a&cmn=ff5353&ct=cdd4d9'></script> 
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
