--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -20,7 +20,12 @@
 
     <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/academicons/1.8.6/css/academicons.min.css integrity="sha256-uFVgMKfistnJAfoCUQigIl+JfUaP47GrRKjf6CTPVmw=" crossorigin=anonymous>
     <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin=anonymous>
-
+    <style>
+      .social-icons {
+        margin-bottom: 20px; /* 아래쪽으로 20px의 마진을 추가 */
+      }
+    </style>
+    
     <link rel="stylesheet" href="./assets/css/style.css">
   </head>
   <body>
@@ -57,7 +62,7 @@
       </section>
       <footer>
         <div class="social-icons">
-
+          
           {% if site.github_link %}            
           <a href="{{ site.github_link }}" target="_blank">
             <i class="fab fa-github"></i>
