--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -20,13 +20,14 @@
 
     <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/academicons/1.8.6/css/academicons.min.css integrity="sha256-uFVgMKfistnJAfoCUQigIl+JfUaP47GrRKjf6CTPVmw=" crossorigin=anonymous>
     <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin=anonymous>
-    <style>
-      .social-icons {
-        margin-bottom: 20px; /* 아래쪽으로 20px의 마진을 추가 */
-      }
-    </style>
+
     
     <link rel="stylesheet" href="./assets/css/style.css">
+    <style>
+      .social-icons i {
+          font-size: 0.7em; /* 이 값을 조정하여 원하는 크기로 설정하세요 */
+      }
+    </style>
   </head>
   <body>
     <div class="wrapper">
