--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -83,11 +83,11 @@
           <a href="{{ site.youtube1 }}" target="_blank">
             <i class="fab fa-youtube"></i>
           </a>
-          {% endif %}
+          <!-- {% endif %}
           {% if site.instagram %}
           <a href="{{ site.instagram }}" target="_blank">
             <i class="fab fa-instagram"></i>
-          </a>
+          </a> -->
           {% endif %}
           
         </div>
