--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -64,35 +64,46 @@
       </section>
       <footer>
         <div class="social-icons">
-          {% if site.github_link %}            
-          <a href="{{ site.github_link }}" target="_blank">
-            <i class="fab fa-github"></i>
-          </a>
-          {% endif %}
+          
           {% if site.google_scholar %}
           <a href="{{ site.google_scholar}}" target="_blank">
             <i class="ai ai-google-scholar" style="font-size:1.6rem"></i>
           </a>
           {% endif %}
+
+          {% if site.linkedin %}
+          <a href="{{ site.linkedin }}" target="_blank">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+          {% endif %}
+
           {% if site.youtube %}
           <a href="{{ site.youtube }}" target="_blank">
             <i class="fab fa-youtube"></i>
           </a>
           {% endif %}
+          
           {% if site.youtube1 %}
           <a href="{{ site.youtube1 }}" target="_blank">
             <i class="fab fa-youtube"></i>
           </a>
-          {% if site.linkedin %}
-          <a href="{{ site.linkedin }}" target="_blank">
-            <i class="fab fa-linkedin-in"></i>
+          {% endif %}
+
+          {% if site.github_link %}            
+          <a href="{{ site.github_link }}" target="_blank">
+            <i class="fab fa-github"></i>
           </a>
-          <!-- {% endif %}
+          {% endif %}
+          
+          <!-- 
           {% if site.instagram %}
           <a href="{{ site.instagram }}" target="_blank">
             <i class="fab fa-instagram"></i>
-          </a> -->
+          </a>
           {% endif %}
+          -->
+        </div>
+        
           
         </div>
         <br>
