--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -52,6 +52,8 @@
         <!-- <br>
         <a href="{{ site.cv_link }}" download>Download CV</a>
         <br> -->
+        <br>
+        <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=0e1633&w=70&t=n&d=bxlSLhlNupkcon_whTxxMxQ8q53OgvnqdNK_qWLkeEM&co=0b4975&cmo=3acc3a&cmn=ff5353&ct=cdd4d9"></script>
       </header>
       <section>
 
@@ -107,7 +109,7 @@
           
         </div>
         <br>
-        <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=0e1633&w=70&t=n&d=bxlSLhlNupkcon_whTxxMxQ8q53OgvnqdNK_qWLkeEM&co=0b4975&cmo=3acc3a&cmn=ff5353&ct=cdd4d9"></script></footer>
+        </footer>
         <!-- <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=250&t=n&d=bxlSLhlNupkcon_whTxxMxQ8q53OgvnqdNK_qWLkeEM&co=2d78ad&ct=ffffff&cmo=3acc3a&cmn=ff5353'></script> -->
       </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
