--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -106,7 +106,10 @@
         <br>
         <br>
         <br>
-        <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=70&t=n&d=KOa6y07IIX6k-Ps4GzrjeE93-oH9mX6hn_6vDZ_2ZQc"></script>
+        <!-- 기존 ClustrMaps (elkhan과 동일한 ID 사용 중) -->
+        <!-- <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=70&t=n&d=KOa6y07IIX6k-Ps4GzrjeE93-oH9mX6hn_6vDZ_2ZQc"></script> -->
+        
+        <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=vaQl-1CPjeiWF7bqo8ePsXeJDmd3PsZ6zSoUPrjtlnI&cl=ffffff&w=a"></script>
       </footer>
         <!-- <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=250&t=n&d=bxlSLhlNupkcon_whTxxMxQ8q53OgvnqdNK_qWLkeEM&co=2d78ad&ct=ffffff&cmo=3acc3a&cmn=ff5353'></script> -->
       </div>
