--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -109,7 +109,25 @@
         <!-- 기존 ClustrMaps (elkhan과 동일한 ID 사용 중) -->
         <!-- <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=70&t=n&d=KOa6y07IIX6k-Ps4GzrjeE93-oH9mX6hn_6vDZ_2ZQc"></script> -->
         
-        <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=70&t=n&d=vaQl-1CPjeiWF7bqo8ePsXeJDmd3PsZ6zSoUPrjtlnI"></script>
+        <script type="text/javascript" id="clustrmaps" src="https://cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=70&t=n&d=vaQl-1CPjeiWF7bqo8ePsXeJDmd3PsZ6zSoUPrjtlnI" async></script>
+        
+        <!-- 디버깅용: ClustrMaps 로딩 상태 확인 -->
+        <script>
+        window.addEventListener('load', function() {
+          setTimeout(function() {
+            var clustrmaps = document.getElementById('clustrmaps');
+            if (clustrmaps) {
+              console.log('ClustrMaps script loaded:', clustrmaps.src);
+            }
+            var widget = document.querySelector('[src*="clustrmaps"]');
+            if (widget) {
+              console.log('ClustrMaps widget found');
+            } else {
+              console.log('ClustrMaps widget NOT found - check Chrome console for errors');
+            }
+          }, 3000);
+        });
+        </script>
       </footer>
         <!-- <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=250&t=n&d=bxlSLhlNupkcon_whTxxMxQ8q53OgvnqdNK_qWLkeEM&co=2d78ad&ct=ffffff&cmo=3acc3a&cmn=ff5353'></script> -->
       </div>
